--- a/publick/index.html
+++ b/publick/index.html
@@ -7,6 +7,7 @@
     <title>welcome webpack</title>
 </head>
 <body>
+    <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
     <div id="root"></div>
 </body>
 </html>
